fix: try to fix icon alignment in web components storybook for link

--- a/packages/components-css/src/link/index.scss
+++ b/packages/components-css/src/link/index.scss
@@ -18,7 +18,8 @@
   @include mixin.rhc-link--any-link;
 }
 
-.nl-link:any-link .utrecht-icon {
+.nl-link:any-link .utrecht-icon,
+.rhc-link--icon {
   @include mixin.rhc-link--icon;
 }
 
